bug fix of overlapping

--- a/docfx/templates/material/styles/extra.css
+++ b/docfx/templates/material/styles/extra.css
@@ -984,8 +984,8 @@ TODO: Move styles
 
 .sample-text{
 
-    height: 100px;
-    max-height: 100px;
+    height: 150px;
+    max-height: 150px;
 }
 
 @media only screen and (max-width: 1175px) {
